# RunMMEasDate

./: .gitignore  CMakeLists.txt  DateInject.cpp  LICENSE  README.md  RunAsDate.cpp  build.bat  main.cpp
GetTimeSample/: CMakeLists.txt  main.cpp
